# android-nfiq-calc

./: LICENSE  README.md
app/: build.gradle
app/src/androidTest/java/com/seamfix/calculatenfiq/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/nfiq/: CMakeLists.txt  native_lib.c
app/src/main/cpp/nfiq/include/: an2k.h  mlp.h  util.h
app/src/main/cpp/nfiq/src/lib/nfiq/: detect.c  libnfiq.txt  link.c  maps.c  remove.c  ridges.c  runmlp.c
app/src/main/java/com/seamfix/calculatenfiq/: NFIQUtil.kt
app/src/test/java/com/seamfix/calculatenfiq/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
